skip selftabbing requests from the deco

causes assert

BUG: 319107
FIXED-IN: 4.10.3
REVIEW: 110251
(cherry picked from commit fd0f9525df26a96d828e3e0717617039c9c991b2)